scroll issue fix on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     /* Gradient */
-    --gradient: #ffe259;
+    --gradient: #F09819;
     
     /* Core colors - Light mode */
     --background: 53 45% 97%;
